src/components/visual/scrollToTopButton/ScrollToTopBtn.module.css
.scrollButton {
    position: fixed;
    bottom: 20px;
    right: 20px;
    width: 1.5rem;
    height: 1.3rem;
    background-color: var(--primary-white);
    color: var(--primary-brown);
    border: 1px solid var(--primary-brown);
    border-radius: 2px;
    text-align: center;
    padding-bottom: 0.2rem;
    opacity: 0;
    transform: translateY(20px);
    /* inizialmente un po’ più in basso */
    transition: opacity 0.3s ease, transform 0.3s ease;
    z-index: 998;

}

.scrollButtonVisible {
    cursor: pointer;
    opacity: 0.8;
    transform: translateY(0);
    /* quando visibile: posizione normale */
}


.scrollButtonVisible:hover {
    opacity: 1;
}

